[tool.poetry]
name = "check-the-weather"
version = "0.1.0"
description = "Dynamic weather data retrieval."
authors = ["Jonathan Rooke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pip = "^24.2"
flask = "3.0.3"
blinker = "1.8.2"
click = "8.1.7"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
werkzeug = "3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
